// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Settings/PluginSettings Default Save Enable 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h2
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
          >
            Plugins
          </h2>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
          style="display: inline-block !important; height: 60vh;"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              aria-colcount="4"
              aria-rowcount="5"
              class="ReactVirtualized__Table makeStyles-table"
              role="grid"
            >
              <div
                class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                role="row"
                style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
              >
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Name
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Description
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Homepage
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Enable
                  </div>
                </div>
              </div>
              <div
                aria-label="grid"
                class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                role="rowgroup"
                style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                tabindex="0"
              />
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root makeStyles-saveButtonBox"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-saveButton MuiButton-containedPrimary"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        Save & Apply
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Settings/PluginSettings Empty 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h2
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
          >
            Plugins
          </h2>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-alignCenter"
          >
            No data to be shown.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Settings/PluginSettings Empty Homepage Items 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h2
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
          >
            Plugins
          </h2>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
          style="display: inline-block !important; height: 60vh;"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              aria-colcount="4"
              aria-rowcount="5"
              class="ReactVirtualized__Table makeStyles-table"
              role="grid"
            >
              <div
                class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                role="row"
                style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
              >
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Name
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Description
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Homepage
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Enable
                  </div>
                </div>
              </div>
              <div
                aria-label="grid"
                class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                role="rowgroup"
                style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                tabindex="0"
              />
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Settings/PluginSettings Few Items 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h2
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
          >
            Plugins
          </h2>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
          style="display: inline-block !important; height: 60vh;"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              aria-colcount="4"
              aria-rowcount="5"
              class="ReactVirtualized__Table makeStyles-table"
              role="grid"
            >
              <div
                class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                role="row"
                style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
              >
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Name
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Description
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Homepage
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Enable
                  </div>
                </div>
              </div>
              <div
                aria-label="grid"
                class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                role="rowgroup"
                style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                tabindex="0"
              />
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Settings/PluginSettings Many Items 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h2
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
          >
            Plugins
          </h2>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
          style="display: inline-block !important; height: 60vh;"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              aria-colcount="4"
              aria-rowcount="15"
              class="ReactVirtualized__Table makeStyles-table"
              role="grid"
            >
              <div
                class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                role="row"
                style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
              >
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Name
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Description
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Homepage
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Enable
                  </div>
                </div>
              </div>
              <div
                aria-label="grid"
                class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                role="rowgroup"
                style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                tabindex="0"
              />
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Settings/PluginSettings More Items 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
  >
    <div
      class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <h2
            class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
          >
            Plugins
          </h2>
          <div
            class="MuiBox-root MuiBox-root"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
          style="display: inline-block !important; height: 60vh;"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              aria-colcount="4"
              aria-rowcount="15"
              class="ReactVirtualized__Table makeStyles-table"
              role="grid"
            >
              <div
                class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                role="row"
                style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
              >
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Name
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Description
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Homepage
                  </div>
                </div>
                <div
                  class="ReactVirtualized__Table__headerColumn"
                  role="columnheader"
                  style="flex: 0 1 50px;"
                >
                  <div
                    class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                    role="cell"
                    style="text-align: left;"
                  >
                    Enable
                  </div>
                </div>
              </div>
              <div
                aria-label="grid"
                class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                role="rowgroup"
                style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                tabindex="0"
              />
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1px; height: 1px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
